<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormatActivity">

    <TextView
        android:id="@+id/txt_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/str_instruction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etx_namefield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:importantForAutofill="no"
        android:ems="10"
        android:hint="@string/str_namefield"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_instruction" />

    <EditText
        android:id="@+id/etx_birthdayfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:importantForAutofill="no"
        android:clickable="false"
        android:focusable="false"
        android:ems="10"
        android:hint="@string/str_birthdayfield"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etx_namefield" />

    <EditText
        android:id="@+id/etx_accountfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/str_accountfield"
        android:inputType="number"
        android:maxLength="16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etx_birthdayfield" />

    <EditText
        android:id="@+id/etx_emailfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/str_emailfield"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etx_accountfield" />

    <Button
        android:id="@+id/btn_readhoroscope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/str_readhoroscope"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etx_emailfield" />

    <Button
        android:id="@+id/btn_cancel"
        android:backgroundTint="@color/purple_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_readhoroscope"
        app:layout_constraintTop_toBottomOf="@+id/etx_emailfield" />
</androidx.constraintlayout.widget.ConstraintLayout>