<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HoroscopeActivity">

    <TextView
        android:id="@+id/txt_horoscopesign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_500"
        android:textSize="30dp"
        android:text="@string/str_horoscope"
        app:layout_constraintBottom_toTopOf="@+id/txt_signdescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_signdescription"
        android:layout_width="203dp"
        android:layout_height="189dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:layout_marginStart="16dp"
        android:text="@string/des_rat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <ImageView
        android:id="@+id/img_sign"
        android:layout_width="176dp"
        android:layout_height="149dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/cont_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/a_rat" />

    <Button
        android:id="@+id/btn_horoscopeback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_back"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_sign" />

    <TextView
        android:id="@+id/txt_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:text="@string/str_age"
        app:layout_constraintBottom_toTopOf="@+id/txt_signdescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_horoscopesign" />
</androidx.constraintlayout.widget.ConstraintLayout>